# serde_s2proto

./: Cargo.toml  py2rs.py  testbreak  testres
mpq/: Cargo.toml
mpq/src/: enctable.rs  lib.rs
replay-list-players/: Cargo.toml
replay-list-players/src/: main.rs  value.rs
src/: lib.rs  versioned_poc.rs  versioned_serde.rs
src/common/: color.rs  mod.rs  player.rs
src/format/: mod.rs  protocol15405.rs
src/tests/: details.rs  header.rs  mod.rs
testdata/: header  header.json
testdata/base_build_15405/: replay.attributes.events  replay.details  replay.game.events  replay.initData  replay.message.events
